// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkIcon should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100 css-14jhlj1"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      class="css-1i4b0eq"
      data-testid="NetworkIcon__icon"
      height="20"
      width="20"
    >
      <svg>
        ark.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      class="css-1i4b0eq"
      data-testid="NetworkIcon__icon"
      height="20"
      width="20"
    >
      <svg>
        ark.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon should render with placeholder 1`] = `
<DocumentFragment>
  <div
    class="ring-theme-background duration-100 css-14jhlj1"
    data-testid="NetworkIcon__placeholder"
  />
</DocumentFragment>
`;
